@@ -1,0 +1,38 @@
+## Makefile.am
+##
+## Makefile.am for Exemplar fixtures/
+##
+## (C) Copyright 2024 Fred Gleason <fredg@paravelsystems.com>
+##
+##   This program is free software; you can redistribute it and/or modify
+##   it under the terms of the GNU General Public License version 2 as
+##   published by the Free Software Foundation.
+##
+##   This program is distributed in the hope that it will be useful,
+##   but WITHOUT ANY WARRANTY; without even the implied warranty of
+##   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+##   GNU General Public License for more details.
+##
+##   You should have received a copy of the GNU General Public
+##   License along with this program; if not, write to the Free Software
+##   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+##
+##
+## Use automake to process this into a Makefile.in
+
+EXTRA_DIST = unified1.conf\
+             unified2.conf\
+             unified3.conf\
+             unified4.conf\
+             profile_tests_no_section_ids.dat\
+             profile_tests_section_ids.dat
+
+CLEANFILES = *~\
+             *.idb\
+             *ilk\
+             *.obj\
+             *.pdb\
+             moc_*
+
+MAINTAINERCLEANFILES = *~\
+                       Makefile.in
