@@ -1,0 +1,20 @@
+[Tests]
+StringValue=Now is the time
+IntegerValue=1234
+HexValue=0x04D2
+DoubleValue=3.1415928
+BoolYesValue=Yes
+BoolNoValue=No
+BoolOnValue=On
+BoolOffValue=Off
+BoolTrueValue=True
+BoolFalseValue=False
+BoolOneValue=1
+BoolZeroValue=0
+TimeHHMMMorningValue=09:30
+TimeHHMMEveningValue=21:30
+TimeHHMMSSMorningValue=09:30:45
+TimeHHMMSSEveningValue=21:30:45
+IpAddressValidValue=1.2.3.4
+
+[Random]
