@@ -1,0 +1,21 @@
+[Random]
+
+[Tests]
+StringValue=for all good men
+IntegerValue=2345
+HexValue=0x0929
+DoubleValue=6.2831856
+BoolYesValue=No
+BoolNoValue=Yes
+BoolOnValue=Off
+BoolOffValue=On
+BoolTrueValue=False
+BoolFalseValue=True
+BoolOneValue=0
+BoolZeroValue=1
+TimeHHMMMorningValue=10:30
+TimeHHMMEveningValue=22:15
+TimeHHMMSSMorningValue=10:30:45
+TimeHHMMSSEveningValue=22:30:45
+IpAddressValidValue=5.6.7.8
+IpAddressInvalidValue=256.256.3.4
