@@ -1,0 +1,20 @@
+[Tests]
+StringValue=to come to the aid
+IntegerValue=3456
+HexValue=0x0D80
+DoubleValue=9.4247784
+BoolYesValue=Yes
+BoolNoValue=No
+BoolOnValue=On
+BoolOffValue=Off
+BoolTrueValue=True
+BoolFalseValue=False
+BoolOneValue=1
+BoolZeroValue=0
+TimeHHMMMorningValue=11:30
+TimeHHMMEveningValue=23:30
+TimeHHMMSSMorningValue=11:30:45
+TimeHHMMSSEveningValue=22:30:45
+IpAddressValidValue=6.7.8.9
+
+[Random]
