@@ -1,0 +1,20 @@
+[Tests]
+StringValue=of their country!
+IntegerValue=4567
+HexValue=0x11D7
+DoubleValue=12.5663712
+BoolYesValue=Yes
+BoolNoValue=No
+BoolOnValue=On
+BoolOffValue=Off
+BoolTrueValue=True
+BoolFalseValue=False
+BoolOneValue=1
+BoolZeroValue=0
+TimeHHMMMorningValue=12:30
+TimeHHMMEveningValue=23:45
+TimeHHMMSSMorningValue=11:45:45
+TimeHHMMSSEveningValue=23:30:45
+IpAddressValidValue=7.8.9.10
+
+[Random]
