@@ -36,6 +36,7 @@ class MainObject : public QObject
  private:
   bool RunTestsNoSectionIds(Profile *p,int *pass_ctr,int *fail_ctr) const;
   bool RunTestsSectionIds(Profile *p,int *pass_ctr,int *fail_ctr) const;
+  bool RunTestsUnified(Profile *p,int *pass_ctr,int *fail_ctr) const;
   void Title(const QString &title) const;
   bool SingleResult(const QString &title,bool result_ok,
 		    int *pass_ctr,int *fail_ctr) const;
